--- a/healthlake_test_notebook.ipynb
+++ b/healthlake_test_notebook.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ All packages imported successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# Install required packages\n",
     "!pip install boto3 requests pandas matplotlib seaborn --quiet\n",
@@ -60,9 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datastore ID: 86d0ba828f546e2bd3521a04f5fd3052\n",
+      "Region: us-east-1\n",
+      "Endpoint: https://healthlake.us-east-1.amazonaws.com/datastore/86d0ba828f546e2bd3521a04f5fd3052/r4/\n"
+     ]
+    }
+   ],
    "source": [
     "# Configuration\n",
     "DATASTORE_ID = \"86d0ba828f546e2bd3521a04f5fd3052\"  # Replace with your datastore ID\n",
@@ -84,9 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ AWS Authentication successful\n",
+      "Account ID: 381492148117\n",
+      "User/Role ARN: arn:aws:sts::381492148117:assumed-role/Rackspace/racker-theo-1c283c8a\n",
+      "User ID: AROAVRUVUG6K6JMPNE63H:racker-theo-1c283c8a\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import boto3\n",
@@ -127,9 +156,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== HealthLake Datastore Information ===\n",
+      "Name: MimicFHIRDemo\n",
+      "Status: ACTIVE\n",
+      "Type Version: R4\n",
+      "Created: 2025-06-02 22:51:59.322000-07:00\n",
+      "Endpoint: https://healthlake.us-east-1.amazonaws.com/datastore/86d0ba828f546e2bd3521a04f5fd3052/r4/\n",
+      "ARN: arn:aws:healthlake:us-east-1:381492148117:datastore/fhir/86d0ba828f546e2bd3521a04f5fd3052\n",
+      "\n",
+      "Encryption: AWS_OWNED_KMS_KEY\n",
+      "Auth Strategy: AWS_AUTH\n",
+      "Fine-grained Auth: False\n"
+     ]
+    }
+   ],
    "source": [
     "# Get datastore information\n",
     "try:\n",
@@ -163,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,6 +225,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'requests_aws4auth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmimic_healthlake_debug\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MimicHealthLakeDebugger\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Initialize with your specific configuration\u001b[39;00m\n\u001b[32m      4\u001b[39m debugger = MimicHealthLakeDebugger()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Library/CloudStorage/OneDrive-RackspaceInc/Documents/aws_hackathon/mimic_healthlake_debug.py:10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01masyncio\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrequests_aws4auth\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AWS4Auth\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mbotocore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mexceptions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ClientError, NoCredentialsError\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'requests_aws4auth'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from mimic_healthlake_debug import MimicHealthLakeDebugger\n",
+    "\n",
+    "# Initialize with your specific configuration\n",
+    "debugger = MimicHealthLakeDebugger()\n",
+    "\n",
+    "# Run the full test suite\n",
+    "success = debugger.run_comprehensive_test()\n",
+    "\n",
+    "if success:\n",
+    "    print(\"🎉 MIMIC HealthLake connection working!\")\n",
+    "else:\n",
+    "    print(\"❌ Issues found - check the detailed output above\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,9 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ FHIR client created successfully\n"
+     ]
+    }
+   ],
    "source": [
     "class HealthLakeFHIRClient:\n",
     "    def __init__(self, datastore_id, region='us-east-1', session=None):\n",
@@ -274,9 +363,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Testing FHIR Capability Statement ===\n",
+      "✓ FHIR Server: Amazon HealthLake FHIR Server\n",
+      "✓ FHIR Version: 4.0.1\n",
+      "✓ Status: active\n",
+      "✓ Date: 2023-12-08\n",
+      "\n",
+      "✓ Supported Resource Types (109):\n",
+      "\n",
+      "Account             ActivityDefinition  AdverseEvent        AllergyIntolerance  Appointment         \n",
+      "AppointmentResponse AuditEvent          Basic               Binary              BodyStructure       \n",
+      "Bundle              CapabilityStatement CarePlan            CareTeam            ChargeItem          \n",
+      "ChargeItemDefinitionClaim               ClaimResponse       ClinicalImpression  CodeSystem          \n",
+      "Communication       CommunicationRequestComposition         ConceptMap          Condition           \n",
+      "Consent             Contract            Coverage            CoverageEligibilityRequestCoverageEligibilityResponse\n",
+      "DetectedIssue       Device              DeviceDefinition    DeviceMetric        DeviceRequest       \n",
+      "DeviceUseStatement  DiagnosticReport    DocumentManifest    DocumentReference   EffectEvidenceSynthesis\n",
+      "Encounter           Endpoint            EnrollmentRequest   EnrollmentResponse  EpisodeOfCare       \n",
+      "ExplanationOfBenefitFamilyMemberHistory Flag                Goal                Group               \n",
+      "GuidanceResponse    HealthcareService   ImagingStudy        Immunization        ImmunizationEvaluation\n",
+      "ImmunizationRecommendationInsurancePlan       Invoice             Library             Linkage             \n",
+      "List                Location            Measure             MeasureReport       Media               \n",
+      "Medication          MedicationAdministrationMedicationDispense  MedicationKnowledge MedicationRequest   \n",
+      "MedicationStatement MessageHeader       MolecularSequence   NutritionOrder      Observation         \n",
+      "OperationOutcome    Organization        OrganizationAffiliationParameters          Patient             \n",
+      "PaymentNotice       PaymentReconciliationPerson              PlanDefinition      Practitioner        \n",
+      "PractitionerRole    Procedure           Provenance          Questionnaire       QuestionnaireResponse\n",
+      "RelatedPerson       RequestGroup        ResearchStudy       ResearchSubject     RiskAssessment      \n",
+      "RiskEvidenceSynthesisSchedule            ServiceRequest      Slot                Specimen            \n",
+      "StructureDefinition StructureMap        Substance           SupplyDelivery      SupplyRequest       \n",
+      "Task                ValueSet            VerificationResult  VisionPrescription  \n"
+     ]
+    }
+   ],
    "source": [
     "# Get FHIR capability statement\n",
     "print(\"=== Testing FHIR Capability Statement ===\")\n",
@@ -314,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,9 +459,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Testing Resource Availability ===\n",
+      "Testing Patient... ❌ Error (Status: No response)\n",
+      "Testing Observation... ❌ Error (Status: No response)\n",
+      "Testing Encounter... ❌ Error (Status: No response)\n",
+      "Testing Condition... ❌ Error (Status: No response)\n",
+      "Testing Medication... ❌ Error (Status: No response)\n",
+      "Testing DiagnosticReport... ❌ Error (Status: No response)\n",
+      "Testing Procedure... ❌ Error (Status: No response)\n",
+      "Testing AllergyIntolerance... ❌ Error (Status: No response)\n",
+      "Testing Practitioner... ❌ Error (Status: No response)\n",
+      "Testing Organization... ❌ Error (Status: No response)\n",
+      "Testing Location... ❌ Error (Status: No response)\n",
+      "Testing Device... ❌ Error (Status: No response)\n",
+      "Testing Immunization... ❌ Error (Status: No response)\n",
+      "Testing CarePlan... ❌ Error (Status: No response)\n",
+      "\n",
+      "=== Summary ===\n",
+      "Available resource types: 0\n",
+      "Resources with data: \n",
+      "\n",
+      "Resource Count Summary:\n",
+      "Empty DataFrame\n",
+      "Columns: [Resource Type, Count]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
    "source": [
     "# Test different FHIR resource types\n",
     "print(\"=== Testing Resource Availability ===\")\n",
